--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -454,7 +454,12 @@ id="updateAppointmentModal" class="modal">
       <div id="mapModalContent" class="modal-content" style="height: 95vh;">
           <span (click)="closeModal('mapModal')" class="close">&times;</span>
           <button (click)="doTheClick()">Substituir a interação com este botão por interação com a tecla "i"</button>
-          <input type="datetime-local" class="form-control" id="mapTime" formControlName="mapTime" placeholder="">
+          <br>
+          <br>
+          <button>Valor de algo que tá duas camadas abaixo: {{thumbRaiser?.selectedDate}}</button>
+          <br>
+          <br>
+          <input type="datetime-local" class="form-control" id="mapTime" formControlName="mapTime" placeholder="" (change)="onMapTimeChange($event)">
           <div #canvasContainer class="canvas-container" id="canvasContainer">
             <div id="parent" hidden>
               <div id="views-panel" hidden>
